# grav-sim

./: CMakeLists.txt  README.md  glad.c  learn.cpp  math.cpp  opengl.cpp  sim.cpp
practice/: math.cpp  strings.cpp
src/: sim.cpp  temp.cpp
